[tool.isort]
profile = "black"
line_length = 120
force_sort_within_sections = "False"
order_by_type = "False"


[tool.black]
line-length = 120
exclude = "./python/"

[tool.poetry]
name = "ludwig"
version = "0.1.0"
description = ""
authors = ["raul <raul@koble.ai>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.11"